Edit java command to use supported parameter